[gd_scene load_steps=7 format=3 uid="uid://cf2vwxd8gsdad"]

[ext_resource type="Texture2D" uid="uid://comeqhyv5yde4" path="res://src/sprites/Death/death.png" id="1_3oq2q"]
[ext_resource type="Script" path="res://src/screens/DeathScreen/death_screen.gd" id="1_w50i2"]
[ext_resource type="FontFile" uid="uid://o5gd3od23k32" path="res://src/assets/fonts/PressStart2P-Regular.ttf" id="2_46dby"]
[ext_resource type="Texture2D" uid="uid://cr2nen3dsab0x" path="res://src/sprites/Backgrounds/exclusion_2/2.png" id="2_frviv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1o080"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vmue"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="DeathScreen" type="Node2D"]
script = ExtResource("1_w50i2")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1o080")

[node name="Background" type="Sprite2D" parent="Panel"]
position = Vector2(642.613, 463.724)
scale = Vector2(2.21792, 1.59089)
texture = ExtResource("2_frviv")

[node name="DeathSprite" type="Sprite2D" parent="Panel"]
position = Vector2(128, 552)
scale = Vector2(0.459567, 0.459567)
texture = ExtResource("1_3oq2q")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 396.0
offset_top = 146.0
offset_right = 916.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(0.501961, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_46dby")
theme_override_font_sizes/font_size = 40
text = "Te moriste we"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 372.0
offset_top = 197.0
offset_right = 952.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0.501961, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_46dby")
theme_override_font_sizes/font_size = 20
text = "Â¿Quieres volver a intentarlo?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Counter" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 359.0
offset_top = 275.0
offset_right = 939.0
offset_bottom = 318.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_46dby")
theme_override_font_sizes/font_size = 40
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 852.0
offset_top = 596.0
offset_right = 1249.0
offset_bottom = 627.0
theme_override_fonts/font = ExtResource("2_46dby")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_8vmue")
text = "Nueva partida "

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 850.0
offset_top = 654.0
offset_right = 1248.0
offset_bottom = 685.0
theme_override_fonts/font = ExtResource("2_46dby")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_8vmue")
text = "Salir"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="button_up" from="Panel/RetryButton" to="." method="_on_retry_button_button_up"]
[connection signal="button_up" from="Panel/ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
